--- a/exercise_three_brit.html
+++ b/exercise_three_brit.html
@@ -6,13 +6,12 @@
 </head>
 <body>
     <script>
-        var player1Score = prompt("Player 1 Score:");
-        var player2Score = prompt("Player 2 Score:");
+        var player1Score = parseFloat(prompt("Player 1 Score:"));
+        var player2Score = parseFloat(prompt("Player 2 Score:"));
         if (player1Score === player2Score) {
         	console.log("Tie");
-        } else if 
-        	(player1Score > player2Score) {
-        	console.log("1");
+        } else if (player1Score > player2Score) {
+        	   console.log("1");
         } else console.log("2");
          /*
             Todo: Print out the number of the player with the higher score, or "Tie" if there is a tie.
